# ovens

src/: CMakeLists.txt  acceptor.cpp  acceptor.h  client.h  config.cfg  logos.h  macro.h  main.cpp  mydb.h  mytime.cpp  mytime.h  service.cpp  service.h  skeleton.cpp  skeleton.h
